test/error/funName1.stg
badFunc = FUN(x -> let {y = THUNK(x);
	  	   	y = THUNK(x)} in y);